ocMacro and ocExternal need to be recalculated on load, fdo#60977

Change-Id: I9e69ca2feae44bc645e8a49e349557f0933a23eb