formula/source/core/api/FormulaCompiler.cxx
@@ -1062,6 +1062,9 @@ void FormulaCompiler::Factor()
                     // override ModeAlways, use
                     // AddRecalcMode(RECALCMODE_ONLOAD) instead.
                 case ocConvert :
+                case ocDde:
+                case ocMacro:
+                case ocExternal:
                     pArr->AddRecalcMode( RECALCMODE_ONLOAD );
                 break;
                     // If the referred cell is moved the value changes.
@@ -1080,9 +1083,6 @@ void FormulaCompiler::Factor()
                     // get its matrix result generated.
                     pArr->AddRecalcMode( RECALCMODE_ONLOAD );
                     pArr->SetHyperLink(true);
-                break;
-                case ocDde:
-                    pArr->AddRecalcMode( RECALCMODE_ONLOAD );
                 break;
                 default:
                     ;   // nothing
